52-gke-platform-admins/budita-app/acm/namespaces/frontend/istio-egress-googleapis.yaml
# Istio addon allows egress by default
# This has no effect in our case: No harm in keeping it
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
spec:
  hosts:
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
